# paca-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assets.yaml  blender_scale_armature_and_animations.py  flake.nix  flecs.yaml  tmux_session.sh
assets/: fragment.glsl  vertex.glsl
assets/animations/: dancing_vampire.pani
assets/fonts/: DejaVuSansFontAtlas.fntat
assets/materials/: dancing_vampire.pmat  lightBulb.pmat  plane.pmat  thing.pmat
assets/meshes/f1961_33-part_01-laser-ortery_texture-150k-4096-gltf_std/: f1961_33-part_01-laser-ortery_texture-150k-4096.gltf
assets/meshes/girl/: girl.gltf  girl_fixed.blend
assets/meshes/man/: man.gltf
assets/models/: dancing_vampire.pmdl  lightBulb.pmdl  plane.pmdl
assets/shaders/: directionalLightPassFragment.glsl  directionalLightPassVertex.glsl  forwardStaticMeshFragment.glsl  forwardStaticMeshVertex.glsl  fragment.glsl  fragmentNoUV.glsl  fragmentPostProcess.glsl  gBufferFragment.glsl  gBufferFragmentForAnimated.glsl  gBufferVertex.glsl  gBufferVertexForAnimated.glsl  lightPassFragment.glsl  lightPassVertex.glsl  lightShaderFragment.glsl  lightShaderVertex.glsl  renderCubeLinesFragment.glsl  renderCubeLinesVertex.glsl  shadowMapVertex.glsl  shadowMapVertexForAnimated.glsl  skyboxFragment.glsl  skyboxVertex.glsl  vertex.glsl  vertexNoUV.glsl
common/engine/: Action.cpp  AnimatedMesh.cpp  Animation.cpp  AssetManager.cpp  CMakeLists.txt  Components.cpp  FlecsSerialization.cpp  Font.cpp  ForwardRenderer.cpp  Input.cpp  Light.cpp  Loader.cpp  Material.cpp  Model.cpp  NewResourceManager.cpp  OrthoCamera.cpp  PerspectiveCamera.cpp  Renderer.cpp  Renderer2D.cpp  ResourceManager.cpp  SceneManager.cpp  StaticMesh.cpp  Window.cpp  World.cpp
common/engine/components/: DirectionalLightShadowMap.cpp
common/engine/include/engine/: AnimatedMesh.hpp  Animation.hpp  AssetManager.hpp  AxisAlignedBoundingBox.hpp  BinarySerialization.hpp  Camera.hpp  Components.hpp  FlecsSerialization.hpp  Font.hpp  ForwardRenderer.hpp  IdTypes.hpp  Input.hpp  Loader.hpp  Material.hpp  NewInput.hpp  NewResourceManager.hpp  OrthoCamera.hpp  PerspectiveCamera.hpp  Renderer.hpp  Renderer2D.hpp  ResourceManager.hpp  SceneManager.hpp  StaticMesh.hpp  Window.hpp  World.hpp  YamlSerialization.hpp
common/engine/include/engine/assets/: AnimatedMesh.hpp  Animation.hpp  Font.hpp  Material.hpp  Mesh.hpp  StaticMesh.hpp
common/engine/include/engine/assets/metadata/: MaterialMetadata.hpp
common/engine/include/engine/components/: AnimatedMesh.hpp  Components.hpp  DirectionalLight.hpp  DirectionalLightShadowMap.hpp  Material.hpp  PointLight.hpp  SceneEntityTag.hpp  Skybox.hpp  StaticMesh.hpp  Transform.hpp
common/engine/loadertest/: CMakeLists.txt  animationloadertest.cpp  main.cpp
common/opengl/: CMakeLists.txt  FrameBuffer.cpp  IndexBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  gl.cpp
common/opengl/include/opengl/: FrameBuffer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  gl.hpp
common/reflection/: CMakeLists.txt
common/resource-file-formats/: CMakeLists.txt  ResourceFileFormats.cpp  Serializer.cpp
common/resource-file-formats/include/: ResourceFileFormats.hpp  Serializer.hpp  YamlSerializer.hpp
common/serializers/: CMakeLists.txt
common/utils/: CMakeLists.txt
editor/: AssetPackEditor.cpp  AssetPackEditor.hpp  CMakeLists.txt  CameraView.cpp  CameraView.hpp  CombineAssetPack.cpp  CombineAssetPack.hpp  CubemapConverter.cpp  CubemapConverter.hpp  Editor.cpp  FilepathEdit.cpp  FilepathEdit.hpp  FontConverter.cpp  FontConverter.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  ModelConverter.cpp  ModelConverter.hpp  OpenGLWidget.cpp  OpenGLWidget.hpp  QtUtils.hpp  SceneEditor.cpp  SceneEditor.hpp  StructEditor.hpp  StructModel.hpp  magic_switch.hpp
editor/tests/: CMakeLists.txt
editor/tests/model-converter-output-size/: CMakeLists.txt  main.cpp
editor/tests/model-converter-output-size/plane/: plane.gltf
engine/engine/: Action.cpp  AnimatedMesh.cpp  AnimatedMesh.hpp  Animation.cpp  Animation.hpp  App.cpp  App.hpp  Font.cpp  Input.hpp  Material.cpp  Model.cpp  OrthoCamera.cpp  PerspectiveCamera.hpp  PerspectiveCameraController.hpp  Renderer2D.hpp  ResourceManager.cpp  StaticMesh.cpp  Window.cpp
engine/opengl/: Shader.cpp  VertexBuffer.hpp  gl.cpp  gl.hpp
engine/util/: ImageLoader.hpp
game/: CMakeLists.txt  Main.cpp
game/game/: Action.cpp  Action.hpp  App.cpp  App.hpp  Input.cpp  OrthoCameraController.cpp  OrthoCameraController.hpp  PerspectiveCameraController.cpp  PerspectiveCameraController.hpp  Window.cpp
imguieditor/: App.cpp  App.hpp  AssetMetadataManager.cpp  AssetMetadataManager.hpp  CMakeLists.txt  Main.cpp  PreviewRenderer.cpp  PreviewRenderer.hpp  UI.cpp  UI.hpp
imguieditor/metadata/: AnimatedMeshMetadata.hpp  AnimationMetadata.hpp  StaticMeshMetadata.hpp
imguieditor/ui/: ComponentsEdit.cpp  ComponentsEdit.hpp  CustomComponents.cpp  CustomComponents.hpp  UI.cpp  UI.hpp
lib/ImGuizmo/: CMakeLists.txt
lib/cgltf/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/implot/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
scripts/: build_and_run
src/: Main.cpp
src/engine/: Action.cpp  Action.hpp  Animation.hpp  App.cpp  App.hpp  Assert.hpp  Camera.hpp  Font.cpp  Font.hpp  Input.cpp  Input.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OrthoCamera.cpp  OrthoCamera.hpp  OrthoCameraController.cpp  OrthoCameraController.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PerspectiveCameraController.cpp  PerspectiveCameraController.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  ResourceManager.cpp  ResourceManager.hpp  StaticMesh.hpp  Window.cpp  Window.hpp  glyph_data_deja_vu_sans.h  glyph_data_spleen.h
src/opengl/: FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  gl.cpp  gl.hpp
src/util/: ImageLoader.cpp  MeshLoader.cpp  MeshLoader.hpp  ModelLoader.cpp  ModelLoader.hpp
(+17 files in other folders)
